force-app/main/default/objects/Partner_Products__c/Partner_Products__c.object-meta.xml
<CustomObject>
    <label>Partner Products</label>
    <nameField>
        <label>Partner Products Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>