force-app/main/default/objects/Partner_Products__c/fields/Max_sale_price__c.field-meta.xml
<CustomField>
    <fullName>Max_sale_price__c</fullName>
    <label>Max sale price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>