force-app/main/default/objects/Partner_Products__c/fields/Product_image__c.field-meta.xml
<CustomField>
    <fullName>Product_image__c</fullName>
    <label>Product image</label>
    <type>Url</type>
</CustomField>