force-app/main/default/objects/Partner_Products__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Price__c</columns>
    <columns>Max_sale_price__c</columns>
    <columns>Max_discount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>